# kusaiGUI

./: .gitignore  CMakeLists.txt  build.sh  cout.txt  mingw.cmake  prompt.txt  train.txt  vcpkg.json
GUI/: gui.cpp  gui.h
aiOverride/: CMakeLists.txt  ai.cpp  ai.hpp
win_build/: CMakeCache.txt
winpkg/: CMakeLists.txt  temp.json  vcpkg.json
